change home page

--- a/templates/display.html
+++ b/templates/display.html
@@ -1,3 +1,6 @@
+<h1 align="center">VANDELAY INDUSTRIES</h1>
+
+<h3> Filter By : </h3>
 <form method = "POST">
   Country:
   <select name="cty">
@@ -21,6 +24,8 @@
   </select>
   <input type="submit" name="three">
 </form>
+
+<h3> See graphs on price data by country </h3>
 
 <form action="/summary">
   <button type="submit"> Go to summary </button>
